--- a/Pickup_Comps_Inner/React/my-app/package.json
+++ b/Pickup_Comps_Inner/React/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://{dracos-l}.github.io",
+  "homepage": "https://dracos-l.github.io/Pickup_Comps/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
